--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "framer-motion": "^11.17.0",
     "next": "^15.1.2",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
